refactor: findTermsByProject using pageable